kubernetes/apps/media/jellyfin/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: jellyfin
    egress:
      - toFQDNs:
          # general
          - matchName: repo.jellyfin.org
          - matchPattern: "*.mirror.jellyfin.org"
          # metadata
          - matchName: api.themoviedb.org
          - matchName: assets.fanart.tv
          - matchName: image.tmdb.org
          - matchName: m.media-amazon.com
          - matchName: movies-api.accel.li
          - matchName: webservice.fanart.tv
          - matchName: www.omdbapi.com
          - matchPattern: "*.thetvdb.com"
          # plugins
          - matchName: cdn.jsdelivr.net
          - matchName: github.com
          - matchName: intro-skipper.org
          - matchName: raw.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
